update kibana and uninstall playbook

--- a/roles/es-other-install/vars/main.yml
+++ b/roles/es-other-install/vars/main.yml
@@ -1,4 +1,4 @@
-es_version: elasticsearch-8.10.0-x86_64.rpm
-es_cluster_name: es-cluster
-jvm_xms: 1g
-jvm_xmx: 1g
+#es_version: elasticsearch-8.10.1-x86_64.rpm
+#es_cluster_name: es-cluster
+#jvm_xms: 1g
+#jvm_xmx: 1g
